# kratos-operator

./: .gitignore  .jujuignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  integration-requirements.txt  lint-requirements.txt  metadata.yaml  pyproject.toml  release-please-config.json  renovate-config.js  renovate.json  requirements.txt  tox.ini  unit-requirements.txt
.github/: .jira_sync_config.yaml  copilot-instructions.md
.github/workflows/: _deploy.yaml  auto-approver.yaml  ci.yaml  cves.yaml  deploy.yaml  documentation.yaml  on_pull_request.yaml  on_push.yaml  on_schedule.yaml  promote.yaml  publish-lib.yaml  publish.yaml  publish_lib.yaml  release.yaml  release_libs.yaml  renovate-approve.yaml  renovate.yaml  terraform_module.yaml  tests.yaml  tiobe.yaml  todo_manual.yaml  todo_on_merge.yaml  update_libs.yaml
claim_mappers/: default.jsonnet  default_schema.jsonnet  microsoft-schema.jsonnet
deployment/: common.auto.tfvars  main.tf
docs/: MIGRATION.md  migration.puml
identity_schemas/: admin_v0.json  default.schema
lib/charms/data_platform_libs/v0/: database_requires.py
lib/charms/hydra/v0/: hydra_endpoints.py  hydra_endpoints_info.py
lib/charms/identity_platform_admin_ui_operator/v0/: admin_ui_service.py
lib/charms/identity_platform_login_ui_operator/v0/: login_ui_endpoints.py
lib/charms/istio_beacon_k8s/v0/: service_mesh.py
lib/charms/istio_pilot/v0/: istio_gateway_info.py
lib/charms/kratos/v0/: kratos_endpoints.py  kratos_info.py  kratos_login_webhook.py  kratos_registration_webhook.py  kubernetes_network_policies.py  session_auth.py
lib/charms/kratos_external_idp_integrator/v0/: kratos_external_provider.py
lib/charms/kratos_external_idp_integrator/v1/: kratos_external_provider.py
lib/charms/smtp_integrator/v0/: smtp.py
lib/charms/traefik_k8s/v0/: traefik_route.py
openspec/changes/archive/2026-05-15-replace-traefik-route-with-istio-ingress-route/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-15-replace-traefik-route-with-istio-ingress-route/specs/public-ingress-route/: spec.md
openspec/specs/internal-ingress-route/: spec.md
openspec/specs/internal-route/: spec.md
openspec/specs/public-route/: spec.md
src/: actions.py  certificate_transfer_integration.py  charm.py  cli.py  clients.py  config.yaml  config_map.py  configs.py  constants.py  env_vars.py  exceptions.py  identity.admin.schema.json  identity.default.schema.json  integrations.py  k8s_network_policies.py  kratos.py  secret.py  services.py  utils.py
src/grafana_dashboards/: kratos.json.tmpl
src/loki_alert_rules/: kratos_high_severity_log.rule
src/manifests/: svc.yaml
src/prometheus_alert_rules/: kratos_unavailable.rule
templates/: ingress.json.j2  internal-route.j2  kratos.yaml.j2  public-route.j2  route.json.j2  verification-email-template.gotmpl
terraform/: .terraform-docs.yaml  MODULE_SPECS.md  main.tf  outputs.tf  variables.tf  versions.tf
tests/integration/: conftest.py  constants.py  test_charm.py  utils.py
tests/unit/: conftest.py  test_actions.py  test_charm.py  test_cli.py  test_clients.py  test_config_map.py  test_configs.py  test_integrations.py  test_kratos.py  test_kratos_registration_webhook_provider.py  test_kratos_registration_webhook_requirer.py  test_kubernetes_network_policies.py  test_secret.py  test_services.py  test_utils.py
